; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_process-util.c_get_process_root.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_process-util.c_get_process_root.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"root\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_process_root(i64 %0, i8** %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8**, align 8
  %5 = alloca i8*, align 8
  store i64 %0, i64* %3, align 8
  store i8** %1, i8*** %4, align 8
  %6 = load i64, i64* %3, align 8
  %7 = icmp sge i64 %6, 0
  %8 = zext i1 %7 to i32
  %9 = call i32 @assert(i32 %8)
  %10 = load i64, i64* %3, align 8
  %11 = call i8* @procfs_file_alloca(i64 %10, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  store i8* %11, i8** %5, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = load i8**, i8*** %4, align 8
  %14 = call i32 @get_process_link_contents(i8* %12, i8** %13)
  ret i32 %14
}

declare dso_local i32 @assert(i32) #1

declare dso_local i8* @procfs_file_alloca(i64, i8*) #1

declare dso_local i32 @get_process_link_contents(i8*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
